#PK-690 Update fields on tenant-settings page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1025,6 +1025,7 @@
     "Permission:SystemManagement": "System Management",
     "Permission:PaymentManagement": "Payment Management",
     "TenantUrlIsRequired": "Link is required.",
-    "InvalidUrlWithField": "Please provide a fully qualified URL starting with http or https for {0}."
+    "InvalidUrlWithField": "Please provide a fully qualified URL starting with http or https for {0}.",
+    "CustomerServiceContactPhone": "Customer Service Contact Phone"
   }
 }
