--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1,9 +1,11 @@
 {
   "culture": "en",
   "texts": {
-
-
-
+    "ProductRankingCarouselModule": "Product Ranking Carousel Module",
+    "OrderInstruction": "Order Instruction",
+    "CountdownTimer": "Countdown Timer",
+    "GroupPurchaseOverview": "Group Purchase Overview",
+    "BannerImages": "Banner Images",
     "AllowOffshoreIslands": "Deliverable to Outlying Islands",
     "ActivateLogisticProvider": "Enable Logistics Provider",
     "SevenToElevenFrozen": "7-11 Frozen",
@@ -833,7 +835,6 @@
     "Menu:WebsiteManagement": "Website Management",
     "Menu:WebsiteSettings": "Website Settings",
     "WebsiteSettings": "Website Settings",
-    "NotificationBar": "Notification Bar",
     "StoreTitle": "Store Title",
     "LogoName": "Logo Name",
     "ReturnExchangePolicy": "Return Exchange Policy",
