--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1,6 +1,11 @@
 {
   "culture": "zh-Hant",
   "texts": {
+    "ProductRankingCarouselModule": "商品排行模組",
+    "OrderInstruction": "流程簡介模組",
+    "CountdownTimer": "倒數模組",
+    "GroupPurchaseOverview": "團購簡介模組",
+    "BannerImages": "橫幅模組",
     "ActivateLogisticProvider": "啟用物流提供商",
     "AllowOffshoreIslands": "可寄送台灣離島",
     "SevenToElevenFrozen": "7-11 冷凍",
