--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1,6 +1,7 @@
 {
   "culture": "en",
   "texts": {
+    "Pikachu:EnterprisePurchaseCanOnlyUseSelfPickup": "Enterprise Purchase can only use Self-Pickup",
     "ProductRankingCarouselModule": "Product Ranking Carousel Module",
     "OrderInstruction": "Order Instruction",
     "CountdownTimer": "Countdown Timer",
