PK-539 and PK-728

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -115,7 +115,7 @@
     "DefaultPaymentGateWay": "預設付款方式",
     "DeleteItem": "刪除商品",
     "DeleteSelected": "刪除",
-    "DeliveredByStore": "廠商統一出貨",
+    "DeliveredByStore": "多溫層統一出貨",
     "DeliveryCost": "運費",
     "DeliveryFee": "運費",
     "DeliveryMethod": "運送方式",
@@ -659,9 +659,9 @@
     "PikachuOne": "Pikachu 1.0",
     "PikachuTwo": "Pikachu 2.0",
     "SelectTemplate": "選擇模板",
-    "TCatDeliveryNormal": "黑貓常溫",
-    "TCatDeliveryFreeze": "黑貓冷藏",
-    "TCatDeliveryFrozen": "黑貓冷凍",
+    "TCatDeliveryNormal": "黑貓宅急便常溫",
+    "TCatDeliveryFreeze": "黑貓宅急便冷藏",
+    "TCatDeliveryFrozen": "黑貓宅急便冷凍",
     "TCatDeliverySevenElevenNormal": "黑貓7-11常溫",
     "TCatDeliverySevenElevenFreeze": "黑貓7-11冷藏",
     "TCatDeliverySevenElevenFrozen": "黑貓7-11冷凍",
