--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -260,7 +260,7 @@
     "MaxAvailableTime": "建立時間結束範圍",
     "Mazu": "馬祖",
     "Menu:CashFlowReconciliationStatement": "金流對帳表",
-    "Menu:DeliveryByStoreSettings": "廠商統一出貨設定",
+    "Menu:DeliveryByStoreSettings": "多溫層統一出貨設定",
     "Menu:DeliveryTemperatureCost": "溫層運費成本",
     "Menu:ElectronicInvoiceSetting": "電子發票設定",
     "Menu:FreebiesListView": "贈品清單",
@@ -633,7 +633,7 @@
     "StoreName": "商店名稱",
     "InvoiceNameDisplay": "發票抬頭顯示",
     "DaysAfterShipmentToGenerateInvoice": "到指定狀態後幾天開立發票",
-    "DeliveryByStoreSettings": "廠商統一出貨設定",
+    "DeliveryByStoreSettings": "多溫層統一出貨設定",
     "SenderName": "寄件人姓名",
     "SenderPhoneNumber": "寄件人手機號碼",
     "SenderPostalCode": "寄件人郵遞區號",
