--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -595,7 +595,7 @@
     "PetSuppliesandFeed": "0013: Pet Supplies and Feed",
     "PrintedMaterials": "0014: Printed Materials",
     "Others": "0015: Others",
-    "DeliveryTypeOthers":  "Others",
+    "DeliveryTypeOthers": "Others",
     "EditRole": "Edit Role",
     "EditUser": "Edit User",
     "Pikachu:MinimumAmountReachCannotBeEmpty": "Minimum Amount Reach Cannot be Empty.",
@@ -1040,6 +1040,7 @@
     "CostOfGoodsSold": "Cost of Goods Sold",
     "ShippingCost": "Shipping Cost",
     "GrossProfit": "Gross Profit",
-    "GrossProfitMargin": "Gross Profit Margin"
+    "GrossProfitMargin": "Gross Profit Margin",
+    "AdvanceFilters": "Advance Filters"
   }
 }
