--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -178,7 +178,7 @@
     "GroupBuyShortName": "Short Name",
     "GroupBuyLogo": "Logo",
     "GroupBuyBanner": "Banner Image",
-    "NotificationBar": "Motification Bar",
+    "NotificationBar": "Notification Bar",
     "GroupBuyTime": "Group Buy Time",
     "Logistic": "Logistic",
     "ExcludeShippingMethod": "Exclude Shipping Method",
@@ -1041,6 +1041,9 @@
     "ShippingCost": "Shipping Cost",
     "GrossProfit": "Gross Profit",
     "GrossProfitMargin": "Gross Profit Margin",
-    "AdvanceFilters": "Advance Filters"
+    "AdvanceFilters": "Advance Filters",
+    "WebsiteBasicSettings": "Website Basic Settings",
+    "BasicSettings": "Basic Settings",
+    "WebsiteManagement": "Website Management"
   }
 }
