#PK-748 Download all members

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1049,6 +1049,7 @@
     "GroupBuyTemplateType": "Group Buy Template Type",
     "Enum:GroupBuyTemplateType.1": "Pikachu 1.0",
     "Enum:GroupBuyTemplateType.2": "Pikachu 2.0",
-    "ItemCost": "Cost"
+    "ItemCost": "Cost",
+    "ExportAll": "Export All"
   }
 }
