Commit For Pk-541

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1050,6 +1050,7 @@
     "Enum:GroupBuyTemplateType.1": "Pikachu 1.0",
     "Enum:GroupBuyTemplateType.2": "Pikachu 2.0",
     "ItemCost": "Cost",
-    "ExportAll": "Export All"
+    "ExportAll": "Export All",
+    "PleaseFillInTheRequiredInformation.": "Please Fill In The Required Information."
   }
 }
