--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1076,7 +1076,8 @@
     "Permission:LogisticsManagement": "物流管理",
     "Permission:SystemManagement": "系統管理",
     "Permission:PaymentManagement": "金流管理",
-    "ItemCost": "成本"
+    "ItemCost": "成本",
+    "PleaseFillInTheRequiredInformation.": "Please Fill In The Required Information."
 
 
   }
