#PK-592 Modify add website page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1042,6 +1042,7 @@
     "GrossProfit": "Gross Profit",
     "GrossProfitMargin": "Gross Profit Margin",
     "AdvanceFilters": "Advance Filters",
+    "Menu:WebsiteBasicSettings": "Website Basic Settings",
     "WebsiteBasicSettings": "Website Basic Settings",
     "BasicSettings": "Basic Settings",
     "WebsiteManagement": "Website Management",
