#PK-592 Modify Add Website page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1052,6 +1052,15 @@
     "Enum:GroupBuyTemplateType.2": "Pikachu 2.0",
     "ItemCost": "Cost",
     "ExportAll": "Export All",
-    "PleaseFillInTheRequiredInformation.": "Please Fill In The Required Information."
+    "PleaseFillInTheRequiredInformation.": "Please Fill In The Required Information.",
+    "Enum:WebsitePageType.1": "Custom Page",
+    "Enum:WebsitePageType.2": "Product List Page",
+    "Enum:WebsitePageType.3": "Article Page",
+    "PageTitle": "Page Title",
+    "PageDescription": "Page Description",
+    "PageLink": "Page Link",
+    "SetAsHomePage": "Set as Home Page",
+    "PageType": "Page Type",
+    "WebsitePageType": "Page Type"
   }
 }
