--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -842,8 +842,8 @@
     "ReturnExchangePolicy": "Return Exchange Policy",
     "TitleDisplayOption": "Title Display Option",
     "Enum:WebsiteTitleDisplayOptions.0": "Store Title",
-    "Enum:WebsiteTitleDisplayOptions.1": "Store Title | Category Name",
-    "Enum:WebsiteTitleDisplayOptions.2": "Category Name | Store Title",
+    "Enum:WebsiteTitleDisplayOptions.1": "Store Title | Subpage Title",
+    "Enum:WebsiteTitleDisplayOptions.2": "Subpage Title | Store Title",
     "AddWebsiteSettings": "Add Website Settings",
     "AreYouSureToDeleteThisRecord": "Are you sure you want to delete this record?",
     "TitleDisplayOptions": "Title Display Options",
