#PK-685 Modify Add Website API

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1104,6 +1104,6 @@
     "GroupBuyModuleType": "Group Buy Module Type",
     "HomePage": "Homepage",
     "NotSetAsHomePage": "Not Set as Homepage",
-    "AreYouSureToDeleteThis": "Please be aware that once this record is deleted, it can never be restored. Do you wish to delete it?"
+    "AreYouSureToDeleteThis?": "Please be aware that once this record is deleted, it can never be restored. Do you wish to delete it?"
   }
 }
