--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -824,108 +824,7 @@
     "Today": "今日",
     "ThisWeek": "本週",
     "ThisMonth": "本月",
-    "RedeemedPoints": "已兌換點數",
-
-
-    "DeductionMethod": "扣點方式",
-    "UnifiedCalculation:": "統一計算:",
-    "StagedCalculation": "分段計算",
-    "Spend": "消費",
-    "ToReceivePoints": "可獲得點數",
-    "ApplicableItems": "適用項目",
-
-    "ShippingFees": "運費",
-    "UsableScope": "可用範圍",
-    "UsableforGroupbuying": "可用於團購",
-    "AllGroupbuys": "所有團購",
-    "SpecificGroupbuys": "特定團購",
-
-    "SelectaProducts": "選擇一個商品",
-
-    "Create": "新增",
-
-    "EarnedPoints": "獲得點數",
-
-    "Limited,validfordays": "限制,有效天數",
-
-    "CalculationMethod": "計算方式",
-
-    "StageSettings": "分段設定",
-
-    "Add-OnProducts": "加購商品",
-
-    "ApplicableforGroupbuying": "適用於團購",
-
-    "ApplicableforProducts": "適用於商品",
-    "Pikachu:ImageSizeExceeds": "圖片大小超過上限{0}MB",
-    "Pikachu:InvalidImageExtension": "無效的圖片副檔名{0}.",
-    "TheFieldIsRequired": "{0} 欄位是必填",
-    "TheLogoFieldIsRequired": "Logo 欄位是必填",
-    "TheBannerFieldIsRequired": "Banner 欄位是必填",
-    "TheFaviconFieldIsRequired": "Favicon 欄位是必填",
-    "ValidationErrors": "驗證錯誤!",
-    "TenantSettingsUpdated": "商戶設定已更新!",
-    "StartTime": "開始時間",
-    "EndTime": "結束時間",
-    "Pikachu:InvalidEnumValue": "提供給{name}值是無效的",
-    "Menu:WebsiteManagement": "網站管理",
-    "Menu:WebsiteSettings": "網站設定",
-    "WebsiteSettings": "網站設定",
-    "NotificationBar": "通知條",
-    "StoreTitle": "商店標題",
-    "LogoName": "Logo 名稱",
-    "ReturnExchangePolicy": "退換貨政策",
-    "TitleDisplayOption": "標題顯示選項",
-    "Enum:WebsiteTitleDisplayOptions.0": "商店標題",
-    "Enum:WebsiteTitleDisplayOptions.1": "商店標題 | 類別名稱",
-    "Enum:WebsiteTitleDisplayOptions.2": "類別名稱 | 商店標題",
-    "AddWebsiteSettings": "新增網站設定",
-    "AreYouSureToDeleteThisRecord": "確定要刪除這筆記錄嗎?",
-    "TitleDisplayOptions": "標題顯示選項",
-    "EditWebsiteSettings": "編輯網站設定",
-    "Enum:UserTypes.0": "所有",
-    "Enum:UserTypes.1": "前台",
-    "Enum:UserTypes.2": "後台",
-    "UserTypes": "使用者類型",
-    "ContactInformation": "聯絡資訊",
-    "AreYouSureToResetTheForm": "確定要重置表單嗎?",
-    "ServiceHoursFrom": "服務時間從",
-    "ServiceHoursTo": "服務時間至",
-    "ShortCodeValidationMessage": "短碼只能包含字母和數字",
-    "ShareProfitPercent": "分潤百分比",
-    "SpecifyCompanyPrivacyPolicy": "指定公司隱私政策",
-    "Menu:LoginConfigurations": "登入設定",
-    "LoginConfigurations": "登入設定",
-    "AppId": "應用程式編號",
-    "AppSecret": "應用程式密鑰",
-    "ChannelSecret": "Channel Secret",
-    "AreYouSureToUpdate": "確定要更新嗎?",
-    "VerificationToken": "驗證 Token",
-    "VerificationCodeEmailBody": "這是驗證碼,請勿向任何人分享這組編碼.",
-    "ResetPasswordCodeEmailBody": "這是密碼重置碼,請勿向任何人分享這組編碼.",
-    "ResetPasswordCode": "密碼重置碼",
-    "EmailAddressNotFound": "查無使用這組Email的用戶.",
-    "UserIsNotActive": "使用者未啟用或不存在.",
-    "CodeIsExpired": "該編碼已過期,請再試一次.",
-    "CodeDoesnotMatch": "提供之編碼為無效.",
-    "DefaultPrivacyPolicy": "預設隱私政策",
-    "LoginConfigurationsUpdated": "登入設定已更新!",
-
-
     "Choose file": "選擇檔案",
-
-
-    "TenantShortCodeRequired": "請填寫統一編號。",
-    "TenantShortCode": "統一編號",
-    "DomainIsRequired": "請填寫域名。",
-    "Domain": "域名",
-    "InvalidUrl": "請提供一個以 http 或 https 開頭的完整 URL。",
-    "PleaseFillInTheRequiredInformation": "請填寫所需資料",
-    "No file chosen": "未選擇任何檔案",
-    "Or drop files here": "或將檔案拖到此處",
-    "HomeDeliveryType": "宅配類型",
-    "ConvenienceStoreType": "超商取貨類型",
-
     "No File Selected": "未選擇任何檔案",
     "Or Drop Files Here": "或將檔案拖到此處",
     "Home Delivery Type": "宅配類型",
@@ -935,11 +834,6 @@
     "Color Schemes": "前台配色",
     "Select Color Theme": "選擇前台配色",
     "Choose Color Theme": "配色方案",
-    "Enum:ColorScheme.1": "森林晨曦組合",
-    "Enum:ColorScheme.2": "熱帶夕陽組合",
-    "Enum:ColorScheme.3": "深海夜空組合",
-    "Enum:ColorScheme.4": "甜杏奶油組合",
-    "Enum:ColorScheme.5": "沙漠晨光組合",
     "Add Module": "新增模塊",
     "Display Method For Product Details": "商品內容顯示方式",
     "Choose a Method": "選擇顯示方式",
@@ -950,100 +844,28 @@
     "Select Style": "選擇樣式",
     "Small Image": "小圖",
     "Large Image": "大圖",
-    "Search...": "輸入商品名稱搜尋",
+
 
     "Add Link": "新增連結",
-    "Title": "標題",
+
     "Sub Title": "副標題",
     "Body Text": "內文",
     "Button Text": "按鈕文字",
     "Button Link": "按鈕連結",
-    "QuantityReach": "當數量達到",
-    "Menu:ProductCategories": "產品類別",
-    "ProductCategories": "產品類別",
-    "Description": "敘述",
-    "AddNew": "新增商品類別",
-    "CarousalImages": "輪播圖片",
+
     "Products": "商品",
     "Item": "品項",
     "Image": "圖片",
     "Remove": "移除",
-    "AddProductCategory": "建立商品類別",
-    "Choose files": "選擇檔案",
-    "EditProductCategory": "編輯商品類別",
-    "UseECPayelectronicreceipt": "使用綠界電子發票",
-    "ColorSchemes": "前台配色",
-    "SelectColorTheme": "選擇前台配色",
-    "ChooseColorTheme": "配色主題",
-    "DisplayMethodForProductDetails": "商品內容顯示方式",
-    "ChooseMethod": "選擇顯示方式",
-    "PureImage_LeftRightSlide": "純圖片（左右滑動）",
-    "PureImage_VerticalSlide": "純圖片（垂直條）",
-    "SpecificationIntroduction": "規格介紹（左圖，右文說明",
-    "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "若此設置關閉，請自行為顧客列印發票",
+   
     "Info": "提醒您",
-    "StatusOnInvoiceIssue": "開立發票狀態",
-    "City": "城市",
-    "CVSStoreId": "門市店號",
-    "CVSStoreOutSide": "是否為離島",
-    "StoreCustomerServiceReply": "商店客服回覆",
-    "CustomerServiceHistory": "客服歷史記錄",
-    "SelectTemperatureControl": "選擇溫層",
-    "ConvenienceStore": "超商取貨資訊",
-    "Phone": "電話",
+   
 
-    "Spent": "總消費",
-    "Birthday": "生日",
-
-    "Unpaid/Due": "未付款/已過期",
-
-    "Update": "更新",
-    "Amount": "總發放金額",
-    "Deductions": "總使用金額",
-    "GroupbuysScope": "团购范围",
-    "Eligableadd-onrange": "可選加購範圍",
-    "NoOfIssuedCodes": "折扣碼發行數量",
-    "MaximunUsePerPerson": "每人最多使用次數",
-    "UpdateDiscountCode": "更新加購商品",
-    "StagedSettings": "分段設定",
-    "Members": "會員列表",
-    "Export": "導出",
+   
+    "GroupbuysScope": "團購範圍",
+    
     "RefundsList": "退款列表",
-    "TenantInformation": "租戶資訊",
-    "CustomerServiceInformation": "客服中心",
-    "FrontendInformation": "前台資訊",
-    "SocialMedia": "社群媒體",
-    "GoogleTagManager": "Google 標籤管理",
-    "GtmEnabled": "啟用 GTM",
-    "GtmContainerIdIsRequired": "Container ID 欄位不可為空",
-
-    "CustomerId": "客戶編號",
-    "SenderZipCode": "寄件人郵遞區號",
-    "CustomerToken": "Customer Token",
-    "ShippingLabelForm": "託運單類別",
-    "PickingListForm": "揀貨單類別",
-    "ShippingLabelFrom711": "7-11 託運單",
-    "DeclaredValue": "申報價值",
-    "ReverseLogisticShippingFee": "逆物流運費",
-    "t-CatNormal": "黑貓常溫",
-    "t-CatFreeze": "黑貓冷藏",
-    "t-CatFrozen": "黑貓冷凍",
-    "7-11Normal": "7-11 常溫",
-    "7-11Freeze": "7-11 冷藏",
-    "7-11Frozen": "7-11 冷凍",
-    "SelectShippingLabelForm": "選擇託運單",
-    "A4DualModeHomeDelivery": "A4 二模宅配",
-    "A4TripleModeHomeDelivery": "A4 三模宅配",
-    "ThermalTransferHomeDelivery": "熱轉印宅配",
-    "SelectPickingListForm": "選擇揀貨單",
-    "A4DualModePickingList": "A4 二模揀貨單",
-    "A4TripleModePickingList": "A4 三模揀貨單",
-    "A4TripleModeB2S": "A4 三模 B2S",
-    "ThermalTransferB2S": "熱轉印 B2C",
-    "BorneByStore": "由商家承擔",
-    "BorneByCustomer": "由顧客承擔",
-    "SelectReverseLogisticShippingFee": "選擇逆物流運費",
-    "SelectShippingLabelFormSevenEleven": "選擇託運單7-11",
+   
     "T-Cat": "黑貓",
     "CashOnly": "只收現金",
     "CardAndMobilePaymentsAccepted": "接受刷卡和行動支付",
@@ -1053,34 +875,326 @@
 
 
 
-    "RoundedCornersWithoutFullWidth": "圓角無滿版",
-    "SquareCornersWithoutFullWidth": "直角無滿版",
-    "FullWidthWithLargeImage": "滿版大圖",
+   
+    "PrintShippedLabel": "列印托運單",
+  
+    "ReportNotification": "自動發送報表",
+
+    "RedeemedPoints": "兌換點數",
+
+
+    "DeductionMethod": "折扣方法",
+    "UnifiedCalculation:": "統一計算:",
+    "StagedCalculation": "階段計算",
+    "Spend": "花費",
+    "ToReceivePoints": "可獲得點數",
+    "ApplicableItems": "適用項目",
+
+    "ShippingFees": "運費",
+    "UsableScope": "可用範圍",
+    "UsableforGroupbuying": "可用於團購",
+    "AllGroupbuys": "所有團購",
+    "SpecificGroupbuys": "特定團購",
+
+    "SelectaProducts": "選擇商品",
+
+    "Create": "新增",
+
+    "EarnedPoints": "獲得點數",
+
+    "Limited,validfordays": "限制,有效天數",
+
+    "CalculationMethod": "計算方法",
+
+    "StageSettings": "階段設定",
+
+    "Add-OnProducts": "加購商品",
+
+    "ApplicableforGroupbuying": "適用於團購",
+
+    "ApplicableforProducts": "適用於商品",
+    "Pikachu:ImageSizeExceeds": "圖片超過上限 {0}MB",
+    "Pikachu:InvalidImageExtension": "所選檔案無效,可以接受的檔案為 {0}.",
+    "TheFieldIsRequired": "這 {0} 欄位是必填",
+    "TheLogoFieldIsRequired": "Logo 欄位是必填",
+    "TheBannerFieldIsRequired": "Banner 欄位是必填",
+    "TheFaviconFieldIsRequired": "Favicon 欄位是必填",
+    "ValidationErrors": "驗證錯誤!",
+    "TenantSettingsUpdated": "租戶設定已更新!",
+    "StartTime": "開始時間",
+    "EndTime": "結束時間",
+    "Pikachu:InvalidEnumValue": "提供的值 {name} 是無效的",
+    "Menu:WebsiteManagement": "網站管理",
+    "Menu:WebsiteSettings": "網站設定",
+    "WebsiteSettings": "網站設定",
+    "StoreTitle": "商店名稱",
+    "LogoName": "Logo 名稱",
+    "ReturnExchangePolicy": "退換貨政策",
+    "TitleDisplayOption": "標題顯示選項",
+    "Enum:WebsiteTitleDisplayOptions.0": "商店名稱",
+    "Enum:WebsiteTitleDisplayOptions.1": "商店名稱 | 子頁面Title",
+    "Enum:WebsiteTitleDisplayOptions.2": "子頁面Title | 商店名稱",
+    "AddWebsiteSettings": "新增網站設定",
+    "AreYouSureToDeleteThisRecord": "你確定你要刪除這筆紀錄?",
+    "TitleDisplayOptions": "標題顯示選項",
+    "EditWebsiteSettings": "編輯網站設定",
+    "Enum:UserTypes.0": "完整",
+    "Enum:UserTypes.1": "前端",
+    "Enum:UserTypes.2": "後端",
+    "UserTypes": "使用者類型",
+    "ContactInformation": "聯絡資訊",
+    "AreYouSureToResetTheForm": "你確定你要重置這份表單?",
+    "ServiceHoursFrom": "服務時段自",
+    "ServiceHoursTo": "服務時段止",
+    "ShortCodeValidationMessage": "簡碼只能是8位元的英數.",
+    "ShareProfitPercent": "分潤比例",
+    "SpecifyCompanyPrivacyPolicy": "公司隱私政策",
+    "Menu:LoginConfigurations": "登入設定",
+    "LoginConfigurations": "登入設定",
+    "AppId": "App ID",
+    "AppSecret": "App Secret",
+    "ChannelSecret": "Channel Secret",
+    "AreYouSureToUpdate": "你確定你要更新嗎？?",
+    "VerificationToken": "驗證 Token",
+    "VerificationCodeEmailBody": "這是驗證碼,請勿與其他人分享此驗證碼.",
+    "ResetPasswordCodeEmailBody": "這是重置密碼驗證碼,請勿與其他人分享.",
+    "ResetPasswordCode": "重置密碼驗證碼",
+    "EmailAddressNotFound": "此Email地址不存在.",
+    "UserIsNotActive": "此用戶不存在或是並沒有開啟This member does not exist or is not active.",
+    "CodeIsExpired": "此驗證碼已過期,請稍後再試",
+    "CodeDoesnotMatch": "驗證碼不正確,請再試一次",
+    "DefaultPrivacyPolicy": "預設隱私政策",
+    "LoginConfigurationsUpdated": "登入設定已更新!",
+    "UnableToRetrieveUserDetails": "無法從 {0} 取得用戶資料.",
+    "TenantShortCodeRequired": "簡碼為必填",
+    "TenantShortCode": "簡碼",
+    "DomainIsRequired": "域名為必填",
+    "Domain": "域名",
+    "InvalidUrl": "請堤估完整的URL,包含Http或Https.",
+    "InvalidUrlWithProperty": "請提供用於{property}的完整URL,包含Http或Https.",
+    "Pikachu:ProductCategoryAlreadyExists": "商品種類 {name} 已經存在.",
+    "Pikachu:ProductCategoryImageMaxLimit": "商品總類不能有超過5個圖片.",
+    "Permission:ProductCategories": "商品種類",
+    "Menu:ProductCategories": "商品種類",
+    "ProductCategories": "商品種類",
+    "CarousalImages": "輪播圖片",
+    "AddProductCategory": "新增商品種類",
+    "EditProductCategory": "編輯商品種類",
+    "Pikachu:DuplicateEmail": "已經有用戶使用了{0} 這組email.",
+    "TenantInformation": "租戶資訊",
+    "CustomerServiceInformation": "客服資訊",
+    "FrontendInformation": "前端資訊",
+    "SocialMedia": "社群媒體",
+    "GoogleTagManager": "Google Tag Manager",
+    "GtmEnabled": "啟用 GTM",
+    "ContainerId": "容器 ID",
+    "GtmContainerIdIsRequired": "GTM 容器 ID 為必填.",
+    "ProductCategory": "商品種類",
+    "Primary": "主要",
+    "Secondary": "次要",
+    "Background": "背景",
+    "SecondaryBg": "次要背景",
+    "SecondaryBackground": "次要背景",
+    "Alert": "警告",
+    "PleaseFillInTheRequiredInformation": "請填寫必要資訊",
+    "No file chosen": "未選擇任何檔案",
+    "Or drop files here": "或將檔案拖到此處",
+    "HomeDeliveryType": "配送方式",
+    "ConvenienceStoreType": "超商取貨方式",
+    "Self-PickupType": "自取方式",
+    "DeliveredByStoreType": "廠商統一出貨方式",
+    "ColorSchemes": "配色方案",
+    "SelectColorTheme": "選擇配色方案",
+    "ChooseColorTheme": "選擇配色方案",
+    "Enum:ColorScheme.1": "森林夜幕",
+    "Enum:ColorScheme.2": "熱帶日夏",
+    "Enum:ColorScheme.3": "深海之夜",
+    "Enum:ColorScheme.4": "甜甜奶白",
+    "Enum:ColorScheme.5": "甜點日暮",
+    "DisplayMethodForProductDetails": "商品內容顯示方式",
+    "ChooseMethod": "選擇顯示方式",
+    "PureImage_LeftRightSlide": "存顯示圖片（左右滑動）",
+    "PureImage_VerticalSlide": "存顯示圖片（垂直滑動）",
+    "SpecificationIntroduction": "特訂指示 (圖片在左, 文字敘述在右)",
+    "SelectStyle": "選擇樣式",
+    "SmallImage": "小圖",
+    "LargeImage": "大圖",
+    "Search...": "搜尋...",
+    "AddLink": "新增連結",
+    "Title": "標題",
+    "SubTitle": "副標題",
+    "BodyText": "內文",
+    "ButtonText": "按鈕文字",
+    "ButtonLink": "按鈕連結",
+    "QuantityReach": "數量達到",
+    "Description": "描述",
+    "AddNew": "新增",
+    "Choose files": "選擇檔案",
+    "UseECPayelectronicreceipt": "使用綠界電子發票",
+    "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "若此設定關閉,請自行為客戶列印發票",
+    "StatusOnInvoiceIssue": "發票開立狀態",
+    "City": "城市",
+    "CVSStoreId": "CVS Store Id",
+    "CVSStoreOutSide": "CVS Store OutSide",
+    "StoreCustomerServiceReply": "存放客戶回覆",
+    "CustomerServiceHistory": "客戶回覆歷史",
+    "SelectTemperatureControl": "選擇溫控",
+    "ConvenienceStore": "便利商店",
+    "Phone": "電話",
+    "Spent": "花費",
+    "Birthday": "生日",
+    "Unpaid/Due": "未付款/到期",
+    "Update": "更新",
+    "Amount": "金額",
+    "Deductions": "扣除",
+    "Eligableadd-onrange": "符合加購範圍",
+    "NoOfIssuedCodes": "發行數量",
+    "MaximunUsePerPerson": "每人最大使用次數",
+    "UpdateDiscountCode": "更新折扣碼",
+    "StagedSettings": "階段設定",
+    "Members": "會員",
+    "Export": "匯出",
+    "CustomerId": "客戶編號",
+    "SenderZipCode": "寄件人郵遞區號",
+    "CustomerToken": "客戶 Token",
+    "ShippingLabelForm": "運送標籤表單",
+    "PickingListForm": "拣貨清單表單",
+    "ShippingLabelFrom711": "7-11 運送標籤",
+    "DeclaredValue": "申報價值",
+    "ReverseLogisticShippingFee": "逆向物流運費",
+    "t-CatNormal": "黑貓常溫",
+    "t-CatFreeze": "黑貓冷藏",
+    "t-CatFrozen": "黑貓冷凍",
+    "7-11Normal": "7-11常溫",
+    "7-11Freeze": "7-11冷藏",
+    "7-11Frozen": "7-11冷凍",
+    "SelectShippingLabelForm": "選擇運送標籤表單",
+    "A4DualModeHomeDelivery": "A4 雙模式宅配",
+    "A4TripleModeHomeDelivery": "A4 三模式宅配",
+    "ThermalTransferHomeDelivery": "熱轉印宅配",
+    "SelectPickingListForm": "選擇揀貨清單表單",
+    "A4DualModePickingList": "A4 雙模式揀貨清單",
+    "A4TripleModePickingList": "A4 三模式揀貨清單",
+    "A4TripleModeB2S": "A4 三模式 B2S",
+    "ThermalTransferB2S": "熱轉印 B2S",
+    "BorneByStore": "Borne By Store",
+    "BorneByCustomer": "Borne By Customer",
+    "SelectReverseLogisticShippingFee": "選擇逆向物流運費",
+    "SelectShippingLabelFormSevenEleven": "選擇 7-11 運送標籤表單",
+    "RoundedCornersWithoutFullWidth": "圓角無全寬",
+    "SquareCornersWithoutFullWidth": "直角無全寬",
+    "FullWidthWithLargeImage": "全寬大圖",
     "available": "可用",
-    "New": "新增",
-    "Permission:InventoryReport": "商品庫存報表",
-    "Permission:ProductCategories": "商品分類",
+    "New": "新",
+    "TenantInformationUpdated": "租戶資訊已更新!",
+    "CustomerServiceUpdated": "客服資訊已更新!",
+    "PrivacyPolicyUpdated": "隱私政策已更新!",
+    "FrontendInformationUpdated": "前端資訊已更新!",
+    "SocialMediaUpdated": "社群媒體已更新!",
+    "GoogleTagManagerUpdated": "Google Tag Manager 已更新!",
+    "Permission:InventoryReport": "庫存報表",
     "Permission:Item": "商品",
-    "Permission:Update": "編輯",
-    "Permission:SetItem": "商品組",
-    "Permission:SetItemDetails": "SetItemDetails",
-    "Permission:ReturnExchangeOrder": "退換貨管理",
-    "Permission:RefundProcess": "退款申請",
-    "Permission:CashFlowDealerSettings": "金流渠道設定",
-    "Permission:CashFlowReconciliationStatement": "金流對帳表",
-    "Permission:EmailSettings": "郵件設定",
-    "Permission:AutomaticEmailing": "自動發信",
+    "Permission:Update": "更新",
+    "Permission:SetItem": "組合商品",
+    "Permission:SetItemDetails": "組合商品詳細資訊",
+    "Permission:ReturnExchangeOrder": "退換貨訂單",
+    "Permission:RefundProcess": "退款處理",
+    "Permission:CashFlowDealerSettings": "現金流經銷商設定",
+    "Permission:CashFlowReconciliationStatement": "現金流對帳單",
+    "Permission:EmailSettings": "電子郵件設定",
+    "Permission:AutomaticEmailing": "自動發送電子郵件",
     "Permission:ShoppingCredits": "購物金",
     "Permission:ProductManagement": "商品管理",
     "Permission:OrderManagement": "訂單管理",
     "Permission:LogisticsManagement": "物流管理",
     "Permission:SystemManagement": "系統管理",
-    "Permission:PaymentManagement": "金流管理",
-    "ItemCost": "成本",
-    "PleaseFillInTheRequiredInformation.": "Please Fill In The Required Information.",
-    "PrintShippedLabel": "列印托運單",
+    "Permission:PaymentManagement": "支付管理",
+    "TenantUrlIsRequired": "租戶網址為必填.",
+    "InvalidUrlWithField": "請為{0}提供完整的URL,並且以Http或Https作為開頭",
+    "CustomerServiceContactPhone": "客服聯絡電話",
+    "Menu:SalesReport": "銷售報表",
+    "SalesReport": "銷售報表",
+    "GrossSales": "總銷售額",
+    "NetSales": "淨銷售額",
+    "Discount": "折扣",
+    "NumberOfOrders": "訂單數",
+    "AverageOrderValue": "平均訂單金額",
+    "CostOfGoodsSold": "銷貨成本",
+    "ShippingCost": "運費",
+    "GrossProfit": "總利潤",
+    "GrossProfitMargin": "總利潤率",
+    "AdvanceFilters": "進階篩選",
+    "Menu:WebsiteBasicSettings": "網站基本設定",
+    "WebsiteBasicSettings": "網站基本設定",
+    "BasicSettings": "基本設定",
+    "WebsiteManagement": "網站管理",
+    "ColorScheme": "配色方案",
+    "GroupBuyTemplateType": "團購模板類型",
+    "Enum:GroupBuyTemplateType.1": "Pikachu 1.0",
+    "Enum:GroupBuyTemplateType.2": "Pikachu 2.0",
+    "ItemCost": "商品成本",
+    "ExportAll": "全部匯出",
+    "PleaseFillInTheRequiredInformation.": "請填寫必要資訊.",
+    "Enum:WebsitePageType.1": "客製頁面",
+    "Enum:WebsitePageType.2": "商品列表頁面",
+    "Enum:WebsitePageType.3": "文章頁面",
+    "PageTitle": "頁面抬頭",
+    "PageDescription": "頁面描述",
+    "PageLink": "頁面連結",
+    "SetAsHomePage": "設為首頁",
+    "PageType": "頁面類型",
+    "WebsitePageType": "網站頁面類型",
+    "Menu:TopbarSettings": "頂部欄設定",
+    "StyleSettings": "樣式設定",
+    "LinkSettings": "連結設定",
+    "Enum:TopbarStyleSettings.1": "預設",
+    "Enum:TopbarLinkSettings.1": "類別 | 抬頭",
+    "Enum:TopbarLinkSettings.2": "連結 | 抬頭",
+    "CategoryTitle": "類別抬頭",
+    "EnterCategoryTitle": "輸入類別抬頭",
+    "LinkTitle": "連結抬頭",
+    "EnterLinkTitle": "輸入連結抬頭",
+    "LinkUrl": "連結 URL",
+    "EnterLinkUrl": "輸入連結 URL",
+    "Enum:TopbarCategoryLinkOption.1": "子頁面 | 選項抬頭",
+    "Enum:TopbarCategoryLinkOption.2": "子連結 | 選項抬頭",
+    "OptionTitle": "選項抬頭",
+    "EnterOptionTitle": "輸入選項抬頭",
+    "LinkedPage": "連結頁面",
+    "SearchPage": "搜尋頁面",
+    "EnterLink": "輸入連結",
+    "TopbarSettings": "頂部欄設定",
+    "Permission:WebsiteManagement": "網站管理",
+    "Permission:WebsiteBasicSettings": "網站基本設定",
+    "Permission:TopbarSettings": "頂部欄設定",
+    "Permission:FooterSettings": "底部欄設定",
+    "Menu:FooterSettings": "底部欄設定",
+    "FooterSettings": "底部欄設定",
+    "EnterTitle": "輸入抬頭",
+    "SelectType": "選擇類型",
+    "Enum:FooterSettingsType.1": "文字",
+    "Enum:FooterSettingsType.2": "連結",
+    "Enum:FooterSettingsType.3": "圖片",
+    "Enum:FooterSettingsType.4": "公司與客戶資訊",
+    "Enum:FooterSettingsType.5": "社群媒體",
+    "IfYouWantToModifyVisitTenantSettings": "如果您想修改,請前往租戶設定",
+    "Link|Title": "連結 | 抬頭",
+    "TemplateType": "模板類型",
+    "WebsiteBasicSettingsUpdated": "網站基本設定已更新!",
+    "Pikachu:ItemStorageTemperatureCannotBeNull": "商品儲存溫度不能為空",
+    "GroupBuyModuleType": "團購模組類型",
+    "HomePage": "首頁",
+    "NotSetAsHomePage": "未設為首頁",
+    "AreYouSureToDeleteThis?": "請注意,如果一但刪除,資料將無法恢復,你確定要刪除嗎？",
+    "Pikachu:InvalidCartItem": "購物車的參數無效,請指定商品或商品組.",
+    "Enum:FooterSettingsPositions.1": "左",
+    "Enum:FooterSettingsPositions.2": "中",
+    "Enum:FooterSettingsPositions.3": "右",
+    "FooterSettingsType": "底部欄設定類型",
+    "Pikachu:InvalidNumberOfLinks": "最少連結數量是1,最大連結數量是{0},請檢查你的連結數量並且再試一次.",
+    "FooterSettingsUpdated": "底部欄設定已更新!",
+    "TopbarStyleSettings": "頂部欄樣式設定",
+    "SellableQuantity": "可售數量",
     "pieces": "件"
-
-
   }
 }
