#PK-878 Sales Report improvement

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1114,6 +1114,7 @@
     "FooterSettingsUpdated": "Footer Settings Updated!",
     "TopbarStyleSettings": "Topbar Style Settings",
     "SellableQuantity": "Sellable Quantity",
-    "pieces": "piece(s)"
+    "pieces": "piece(s)",
+    "GroupBuy": "Group Buy"
   }
 }
