--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -9,7 +9,7 @@
     "BannerImages": "橫幅模組",
     "ActivateLogisticProvider": "啟用物流提供商",
     "AllowOffshoreIslands": "可寄送台灣離島",
-    "SevenToElevenFrozen": "7-11 冷凍",
+    "SevenToElevenFrozen": "綠界 | 7-11 冷凍",
     "Paid": "已付款",
     "PaymentStatus": "款項狀態",
     "RefundChannel": "退款渠道",
@@ -56,8 +56,8 @@
     "Between14To18PM": "14-18時",
     "B-Freeze": "黑貓冷藏",
     "B-Frozen": "黑貓冷凍",
-    "BlackCat": "黑貓",
-    "BlackCat1": "黑貓",
+    "BlackCat": "綠界 | 黑貓宅急便",
+    "BlackCat1": "綠界 | 黑貓宅急便",
     "BlackCatFreeze": "黑貓冷藏",
     "BlackCatFrozen": "黑貓冷凍",
     "BlackCatHomeDelivery": "黑貓宅急便",
@@ -153,9 +153,9 @@
     "Fail": "退款失敗",
     "Failed": "失敗",
     "FamilyMart": "全家",
-    "FamilyMart1": "Family Mart",
-    "FamilyMartC2c": "全家C2C",
-    "FamilyMartC2C": "全家C2C",
+    "FamilyMart1": "綠界 | 全家",
+    "FamilyMartC2c": "綠界 | 全家 C2C",
+    "FamilyMartC2C": "綠界 | 全家 C2C",
     "Filter": "篩選",
     "First": "前置",
     "Footer": "結尾訊息",
@@ -406,7 +406,7 @@
     "PlatformID": "特約合作平台商代號",
     "PleaseContactUs": "取貨前line@客服聯繫",
     "PleaseEnterThresholdAmount": "請輸入免運門檻",
-    "PostOffice": "郵局",
+    "PostOffice": "綠界 | 中華郵政",
     "PreorderQuantity": "預購數量",
     "PrepareShipment": "處理中",
     "Preview": "預覽",
@@ -478,8 +478,8 @@
     //SetItem
     "SetItem": "商品組",
     "SetItemPrice": "設定商品組價格",
-    "SevenToEleven1": "7-11",
-    "SevenToElevenC2C": "7-11 C2C",
+    "SevenToEleven1": "綠界 | 7-11",
+    "SevenToElevenC2C": "綠界 | 7-11 C2C",
     "ShareProfit": "分潤比例",
     "ShipmentNotify": "物流通知",
     "Shipped": "已出貨",
@@ -660,12 +660,12 @@
     "PikachuOne": "Pikachu 1.0",
     "PikachuTwo": "Pikachu 2.0",
     "SelectTemplate": "選擇模板",
-    "TCatDeliveryNormal": "黑貓宅急便常溫",
-    "TCatDeliveryFreeze": "黑貓宅急便冷藏",
-    "TCatDeliveryFrozen": "黑貓宅急便冷凍",
-    "TCatDeliverySevenElevenNormal": "黑貓7-11常溫",
-    "TCatDeliverySevenElevenFreeze": "黑貓7-11冷藏",
-    "TCatDeliverySevenElevenFrozen": "黑貓7-11冷凍",
+    "TCatDeliveryNormal": "黑貓宅急便 | 宅配常溫",
+    "TCatDeliveryFreeze": "黑貓宅急便 | 宅配冷藏",
+    "TCatDeliveryFrozen": "黑貓宅急便 | 宅配冷凍",
+    "TCatDeliverySevenElevenNormal": "黑貓宅急便 | 7-11 常溫",
+    "TCatDeliverySevenElevenFreeze": "黑貓宅急便 | 7-11 冷藏",
+    "TCatDeliverySevenElevenFrozen": "黑貓宅急便 | 7-11 冷凍",
 
     "OuterIsland": "外島",
 
@@ -1063,8 +1063,8 @@
     "DeclaredValue": "申報價值",
     "ReverseLogisticShippingFee": "逆向物流運費",
     "t-CatNormal": "黑貓常溫",
-    "t-CatFreeze": "黑貓冷藏",
-    "t-CatFrozen": "黑貓冷凍",
+    "t-CatFreeze": "綠界 | 黑貓宅急便 (冷藏)",
+    "t-CatFrozen": "綠界 | 黑貓宅急便 (冷凍)",
     "7-11Normal": "7-11常溫",
     "7-11Freeze": "7-11冷藏",
     "7-11Frozen": "7-11冷凍",
