#PK-888 Improvement of Logistics section

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1115,6 +1115,7 @@
     "TopbarStyleSettings": "Topbar Style Settings",
     "SellableQuantity": "Sellable Quantity",
     "pieces": "piece(s)",
-    "GroupBuy": "Group Buy"
+    "GroupBuy": "Group Buy",
+    "DeliveryTimePreferance": "Delivery Time Preferance"
   }
 }
