--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -118,6 +118,8 @@
     "NewTag": "New Tag",
     "SellingPrice": "Selling Price",
     "Pikachu:ItemNameCannotBeNull": "Item Name Can not be null",
+    "Pikachu:ItemStyleKeyCannotBeNull": "Item Style Key Can not be null",
+    "Pikachu:ItemStyleKeyCannotBeDuplicate": "Item Style Key Can not be duplicate",
     "Pikachu:GroupBuyNameCannotBeNull": "Group Buy Name Can not be null",
     "Pikachu:ItemWithSameNameAlreadyExists": "Item with same Name already exists",
     "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
